--- a/pointgame/pointgame/src/main/resources/templates/login.html
+++ b/pointgame/pointgame/src/main/resources/templates/login.html
@@ -17,8 +17,8 @@
             </div>
 
             <div class="input-group">
-                <label for="password">パスワード</label>
-                <input type="password" id="password" name="password" />
+                <label for="memberPassword">パスワード</label>
+                <input type="memberPassword" id="memberPassword" name="memberPassword" />
             </div>
 
             <button type="submit" class="login-button">ログイン</button>
