game history page-1

--- a/pointgame/pointgame/src/main/resources/templates/game.html
+++ b/pointgame/pointgame/src/main/resources/templates/game.html
@@ -38,8 +38,8 @@
         <tbody id="result-body">
           <tr>
             <td>1回</td>
-            <td id="attempt1"></td>
-            <td></td>
+            <td th:text="${resultInfo.resultNumber}"></td>
+			<td	th:text="${resultInfo.resultContent}"></td>
           </tr>
           <tr>
             <td>2回</td>
