--- a/pointgame/pointgame/src/main/resources/templates/game.html
+++ b/pointgame/pointgame/src/main/resources/templates/game.html
@@ -17,17 +17,19 @@
       <div class="points">現在のポイント :<span id="points" th:text="${pointInfo.point}"></span></div>
 
 	  <form action="/play" method="get">
-      <div class="game-area">
-        <p>隠れ数字 : <span class="hidden-number">* * *</span></p>
-        <p>
-          入力数字 :
-          <input type="num1" id="num1" name="num1" maxlength="1" />
-          <input type="num2" id="num2" name="num2" maxlength="1" />
-          <input type="num3" id="num3" name="num3" maxlength="1" />
-          <button type="submit" class="play-button">確認</button>
-        </p>
-      </div>
-	  </form>
+		  <!-- 🔹 memberId를 숨겨진 입력 필드로 추가 -->
+		  <input type="hidden" name="memberId" th:value="${memberId}" />
+		  <div class="game-area">
+		    <p>隠れ数字 : <span class="hidden-number">* * *</span></p>
+		    <p>
+		      入力数字 :
+		      <input type="num1" id="num1" name="num1" maxlength="1" />
+		      <input type="num2" id="num2" name="num2" maxlength="1" />
+		      <input type="num3" id="num3" name="num3" maxlength="1" />
+		      <button type="submit" class="play-button">確認</button>
+		    </p>
+		  </div>
+		</form>
 
       <table class="result-table">
         <tr>
@@ -36,56 +38,11 @@
           <td id="result">結果</td>
         </tr>
         <tbody id="result-body">
-          <tr>
-            <td>1回</td>
-            <td th:text="${resultInfo.resultNumber}"></td>
-			<td	th:text="${resultInfo.resultContent}"></td>
-          </tr>
-          <tr>
-            <td>2回</td>
-            <td id="attempt2"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>3回</td>
-            <td id="attempt3"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>4回</td>
-            <td id="attempt4"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>5回</td>
-            <td id="attempt5"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>6回</td>
-            <td id="attempt6"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>7回</td>
-            <td id="attempt7"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>8回</td>
-            <td id="attempt8"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>9回</td>
-            <td id="attempt9"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>10回</td>
-            <td id="attempt10"></td>
-            <td></td>
-          </tr>
+			<tr th:each="result, iterStat : ${resultInfos}">
+			  <td th:text="${iterStat.count} + '回'"></td>
+			  <td th:text="${result.resultNumber}"></td>
+			  <td th:text="${result.resultContent}"></td>
+			</tr>
         </tbody>
       </table>
     </div>
