--- a/pointgame/pointgame/src/main/resources/templates/login.html
+++ b/pointgame/pointgame/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 
             <div class="input-group">
                 <label for="memberPassword">パスワード</label>
-                <input type="memberPassword" id="memberPassword" name="memberPassword" />
+                <input type="Password" id="memberPassword" name="memberPassword" />
             </div>
 
             <button type="submit" class="login-button">ログイン</button>
