--- a/pointgame/pointgame/src/main/resources/templates/game.html
+++ b/pointgame/pointgame/src/main/resources/templates/game.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 	<!-- 게임 종료 메시지를 숨긴 상태로 HTML에 포함 -->
-	<div id="gameOverMessage" th:text="${gameOverMessage}" style="display: none;"></div>
+	<div id="gameOver" th:text="${pointInfo.gameOver}" style="display: none;"></div>
 
     <div class="container">
 		<div class="header">
