--- a/pointgame/pointgame/src/main/resources/templates/game.html
+++ b/pointgame/pointgame/src/main/resources/templates/game.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="/CSS/popup.css" />
   </head>
   <body>
-	<!-- 게임 종료 메시지를 숨긴 상태로 HTML에 포함 -->
-	<div id="gameOver" th:text="${pointInfo.gameOver}" style="display: none;"></div>
-
     <div class="container">
 		<div class="header">
         <span>数当てゲーム</span>
@@ -57,6 +54,12 @@
 	           <button id="popup-close">OK</button>
 	       </div>
 	   </div>
-  </body>
-  <script src="/jS/popup.js"></script>
+
+
+  <!-- gameOver 값을 data-attribute로 전달 -->
+     <div id="game-data" th:data-gameOver="${gameOver}"></div>
+  
+     <script src="/js/popup.js"></script>
+
+	 </body>
 </html>
